name:           HaskellProject
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Deep

executable HaskellProject
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   containers >=0.5.0 && <0.6,
                   split >=0.2.2 && <0.3
  ghc-options:     -Wall

